fix no-wrap and other small bugs

--- a/cidash-ui/src/components/Card.module.css
+++ b/cidash-ui/src/components/Card.module.css
@@ -41,7 +41,6 @@
   padding: 15px;
   grid-template-columns: 1fr 1fr;
   grid-row-gap: 15px;
-  white-space: nowrap;
 }
 
 .cardSeperator {
