--- a/cidash-ui/src/components/EventDashboard.module.css
+++ b/cidash-ui/src/components/EventDashboard.module.css
@@ -3,5 +3,5 @@
     padding: 20px;
     grid-column-gap: 15px;
     grid-row-gap: 15px;
-    grid-template-columns: repeat(auto-fit, 200px);
+    grid-template-columns: repeat(auto-fit, 300px);
 }
