--- a/cidash-ui/src/components/Version.module.css
+++ b/cidash-ui/src/components/Version.module.css
@@ -1,5 +1,5 @@
 .versionCard{
-    min-width: 200px;
+    min-width: 300px;
     border: 2px solid white;
     border-radius: 10px;
     text-align: center;
